[package]
name = "jbodncp"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
clap = { version = "4.5.41", features = ["derive"] }
http = "1.3.1"
log = "0.4.27"
logsy = "1.0.1"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "net", "process", "fs", "full"] }
tokio-util = { version = "0.7.15", features = ["io"] }
ureq = "3.0.12"

[dev-dependencies]
tempfile = "3.20.0"
